[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "civo-cloud-ansible-collection"
version = "1.0.0"
description = "Ansible collection for managing Civo cloud resources"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["plugins"]
exclude = [".ansible"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line-too-long — handled by formatter
  "E402",  # module-level import not at top — standard Ansible module pattern
]

[tool.ruff.lint.isort]
known-first-party = ["ansible_collections.civo.cloud"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
